Fixes #1: fixed word count function

--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
             }
             
             function wordCount() {
-                var count = document.querySelector("#notification").innerHTML.trim().replace(/  +/g, ' ').split(' ').length;
-                if (document.querySelector("#notification").innerHTML.length == 0) count = 0;
+                var count = document.querySelector("#notification").innerHTML.trim();
+                count = count.replace(/&nbsp;+/g, "");
+                count = count.replace(/<[^>]*>/g, " ");
+                count = count.replace(/\s+/g, " ");
+                count = count.split(" ");
+                var p = 0;
+                for( var i = 0; i < count.length; i++){
+                    if(count[i] == "") ++p;
+                }
+                count = count.length - p; 
                 document.querySelector("#count").innerHTML = "Count: " + count; 
             }
 
