--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1> Note taking application</h1>
         <h2> [automatic save ] </h2>
     </div>
-        <div id="notification" contenteditable style="background-color:maroon; color: white ;width:700px; height:300px;"></div>
-   <div style="background-color: bisque; width: 100%" id="count">
+        <div id="notification" contenteditable style="background-color:maroon; color: white ;width:700px; height:300px;  overflow-y:auto !important;"></div>
+   <div style="background-color: bisque; width: 100%;" id="count">
 </div>
         <button style="background-color: mediumaquamarine" onclick="save()">Save Text</button>
         <button style="background-color: mediumaquamarine" onclick="erase()">Erase Text</button>
